# task-sources-and-contracts

./: README.md  pyproject.toml  test.py
src/: cli.py  constants.py
src/common/: config.py
src/inbox/: core.py
src/models/: descriptors.py  task.py
src/sources/: __init__.py  api.py  json.py  repository.py  stdin.py
tests/: test_api.py  test_file.py
